force-app/main/default/objects/Lead/fields/AHPRA_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>AHPRA_Registration_Number__c</fullName>
    <label>AHPRA Registration Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>