force-app/main/default/objects/Lead/fields/GW_Volunteers__Volunteer_Skills__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Skills__c</fullName>
    <inlineHelpText>Select the skill(s) this person has that should be used to find volunteer jobs.</inlineHelpText>
    <label>Volunteer Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Computer usage</fullName>
            </value>
            <value>
                <fullName>Manual labor</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Event Planning</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Building Maintenance</fullName>
            </value>
            <value>
                <fullName>Clinic/Patient Liaison</fullName>
            </value>
            <value>
                <fullName>Committee Participation</fullName>
            </value>
            <value>
                <fullName>Event Planning/Event Personnel</fullName>
            </value>
            <value>
                <fullName>Gardening/Landscaping</fullName>
            </value>
            <value>
                <fullName>Graphics/Design/Copywriting</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Photography/Videography</fullName>
            </value>
            <value>
                <fullName>Professional Consulting</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
            <value>
                <fullName>Research Assistance</fullName>
            </value>
            <value>
                <fullName>Word Processing/Typing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Academic Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>