force-app/main/default/objects/Lead/fields/Lead_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Type__c</fullName>
    <defaultValue>$RecordType.DeveloperName</defaultValue>
    <description>Used to map the Lead Record Type to an Opportunity Record Type during Lead conversion.</description>
    <label>Lead Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>