force-app/main/default/objects/Lead/fields/MedContact_Occupation__c.field-meta.xml
<CustomField>
    <fullName>MedContact_Occupation__c</fullName>
    <label>Occupation</label>
    <length>250</length>
    <type>Text</type>
</CustomField>