force-app/main/default/objects/Lead/fields/Medicare_Provider_Number__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Provider_Number__c</fullName>
    <label>Medicare Provider Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>