force-app/main/default/objects/Lead/fields/Preferred_contact_time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_contact_time__c</fullName>
    <label>Preferred contact time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>