force-app/main/default/objects/Lead/recordTypes/Individual_Healthcheck_Lead.recordType-meta.xml
<RecordType>
    <fullName>Individual_Healthcheck_Lead</fullName>
    <active>true</active>
    <businessProcess>Healthchecks</businessProcess>
    <label>Individual Healthcheck Lead</label>
</RecordType>