force-app/main/default/objects/Lead/recordTypes/Medical_Contact.recordType-meta.xml
<RecordType>
    <fullName>Medical_Contact</fullName>
    <active>true</active>
    <businessProcess>Medical Contact</businessProcess>
    <label>Medical Contact</label>
</RecordType>