force-app/main/default/objects/Lead/recordTypes/Medicinal_Cannabis_Lead.recordType-meta.xml
<RecordType>
    <fullName>Medicinal_Cannabis_Lead</fullName>
    <active>true</active>
    <businessProcess>Medical Contact</businessProcess>
    <label>Medicinal Cannabis Lead</label>
</RecordType>