force-app/main/default/objects/Lead/recordTypes/Volunteer_Lead.recordType-meta.xml
<RecordType>
    <fullName>Volunteer_Lead</fullName>
    <active>true</active>
    <businessProcess>Volunteer</businessProcess>
    <label>Volunteer Lead</label>
</RecordType>