force-app/main/default/objects/Lead/recordTypes/Workplace_Healthcheck_Lead.recordType-meta.xml
<RecordType>
    <fullName>Workplace_Healthcheck_Lead</fullName>
    <active>true</active>
    <businessProcess>Healthchecks</businessProcess>
    <label>Workplace Healthcheck Lead</label>
</RecordType>