force-app/main/default/objects/Lead/listViews/Medical_Leads.listView-meta.xml
<ListView>
    <fullName>Medical_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>MedContact_Occupation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Record_Type__c</field>
        <operation>contains</operation>
        <value>medical</value>
    </filters>
    <label>Medical Leads</label>
</ListView>