force-app/main/default/objects/Lead/listViews/X2a_Individual_Healthcheck_Unassigned.listView-meta.xml
<ListView>
    <fullName>X2a_Individual_Healthcheck_Unassigned</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <filterScope>Queue</filterScope>
    <label>2a. Individual Healthcheck - Unassigned</label>
    <language>en_US</language>
    <queue>Individual_Healthcheck_Leads</queue>
</ListView>