force-app/main/default/objects/Lead/listViews/X3a_Workplace_Healthcheck_Unassigned.listView-meta.xml
<ListView>
    <fullName>X3a_Workplace_Healthcheck_Unassigned</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <filterScope>Queue</filterScope>
    <label>3a. Workplace Healthcheck - Unassigned</label>
    <language>en_US</language>
    <queue>Workplace_Healthcheck_Leads</queue>
</ListView>