force-app/main/default/objects/Lead/listViews/X3b_Workplace_Healthcheck_In_Progress.listView-meta.xml
<ListView>
    <fullName>X3b_Workplace_Healthcheck_In_Progress</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Workplace_Healthcheck_Lead</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>In Progress,Attempted Contact</value>
    </filters>
    <label>3b. Workplace Healthcheck - In Progress</label>
    <language>en_US</language>
</ListView>