force-app/main/default/objects/Lead/listViews/X4a_Volunteer_Leads.listView-meta.xml
<ListView>
    <fullName>X4a_Volunteer_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Volunteer_Lead</value>
    </filters>
    <label>4a. Volunteer Leads</label>
    <language>en_US</language>
    <queue>Volunteer_Leads</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>